Fixed issue with invalid route
